# NodeSensor

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ascon.c  ascon.h  bh1750.c  bh1750.h  bmp180.c  bmp180.h  bmp280.c  bmp280.h  board_pins.h  crypto.c  crypto.h  crypto_cfg.h  main.c  packet.c  packet.h  sht3x.c  sht3x.h  sx127x.c  sx127x.h
